--- a/style.css
+++ b/style.css
@@ -1,4 +1,29 @@
-html {
-    font-size: 60px;
-    background-color:yellow;
+#header {
+    background-color: grey;
+    text-align: center;
+    color: black;
+    font-weight: 700;
 }
+
+
+html {
+    font-size: 38px;
+    background-color:gray;
+    text-align: center;
+}
+
+
+table, th ,td {
+    border:1px solid;
+    align-:center;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .button {
+font-size: 26px;
+width: 10%;
+  }
